# LoRe

./: .gitignore  BoxClipper3D.cpp  CMakeLists.txt  LoRe.sln  LoRe.vcxproj  LoRe.vcxproj.filters  README.md  main.cpp  resources.qrc
LoRe/x64/Debug/: vc143.idb
LoRe/x64/Debug/LoRe.tlog/: LoRe.lastbuildstate
datasets/: analysis.csv  circle_3d.pcd  coordinates.txt  ground_truth.txt  sor_pass_ly.pcd  sor_pass_ry.pcd  test.txt  validate.txt
datasets/exp_result/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  output_summary.csv
datasets/real_result/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  output_summary.csv  txt2csv.py
docs/: LoRe.xmind  PCL注册API.md  WSL配置.md  技术路线.md  课题简介.md
include/: filter.h  fit.h  lore.h  mainwindow.h  optimize.h  print.h  segmentation.h  type.h  view.h
src/: BoxClipper3D.cpp  cluster_extraction.cpp  filter.cpp  filter.h  fit.cpp  heart.cpp  icp.cpp  interactive_icp.cpp  lore.cpp  lore.h  mainwindow.cpp  optimize.cpp  passthrough.cpp  pcd_reader.cpp  print.cpp  print.h  segmentation.cpp  statistical_removal.cpp  view.cpp  voxel_grid.cpp
src/trash/: box_clipper.cpp  heart.cpp
ui/: mainwindow.ui
